<resources>
    <string name="app_name">SYM_Labo2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Accueil</string>
    <string name="title_transmission_async">Transmission asynchrone</string>
    <string name="title_transmission_delayed">Transmission différée</string>
    <string name="title_transmission_of_objects">Transmission d\'objets</string>
    <string name="title_transmission_compressed">Transmission compressée</string>
    <string name="deferred_request">Requête Différée</string>
    <string name="waiting_on_user_interaction">En attente d\'une action utilisateur</string>
    <string name="async_request">Requête Asynchrone</string>
    <string name="json_request">Requête JSON</string>
    <string name="xml_request">Requête XML</string>
    <string name="compressed_request">Requête Compressée</string>
    <string name="home_msg">Cette application a été créé pour le 2ème laboratoire du cours SYM à la HEIG-VD.</string>
    <string name="waiting_rsp">En attente de la réponse ...</string>
    <string name="content_spinner_title">Choix du contenu:</string>
</resources>