<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.sym.sym_labo2.fragment.TransmissionOfObjects">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:text="@string/title_transmission_of_objects" />

        <Button
            android:id="@+id/bJSON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/json_request" />

        <Button
            android:id="@+id/bXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_request" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/waiting_on_user_interaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInfoObject"/>
        </ScrollView>

    </LinearLayout>
</FrameLayout>
