<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.sym.sym_labo2.fragment.TransmissionDelayed">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:text="@string/title_transmission_delayed" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_spinner_title" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/contents_array"/>

        <Button
            android:id="@+id/bDeferred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deferred_request" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/waiting_on_user_interaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInfoDelayed"/>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
