<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.sym.sym_labo2.TransmissionCompressed">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_transmission_compressed" />

        <Button
            android:id="@+id/bCompressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compressed_request" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/waiting_on_user_interaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInfoCompressed"/>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
